--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="http://i.picasion.com/resize92/d2261932d421f40877776b380257153f.png" width="100" align="right" height="100" alt="KH_monogram">            
       <h1>Isaiah Lawson</h1>
       <h3>How to record a show for WolfPack Radio</h3>
 
