--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ Add your Things You'll Need.
               <li>Computer</li>
               <li>Microphone to Record</li>
               <li>Headset</li>
-              <li>Music of your choice</li>
+              <li>Clean Music of your choice</li>
               <li> DJ Board </li>
             </ul>
           </aside>
@@ -116,23 +116,25 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Login to your computer and start up Hindenburg and your DJ Board</h3>
-              <p>This is necessary to start the show. </p> 
+              <h3>Start Up</h3>
+              <p> Log in to the WolfPack Radio computer and start up Hindenburg and your DJ Board. Connect your device on which you’re playing music and connect it to Hindenburg. Once you have the device of your choice, connect it to Rodecaster Pro. Specific details will be provided in the link. If you are recording with a guest over the phone, you can use multiple inputs. Everything that comes out of the device will be recorded, so turn off notifications, refrain from watching videos, etc.
+ </p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Microphone</h3>
+              <p>Plug into headphone input “1” at the back of the board. You can adjust headphone monitoring levels with the upper right knob beneath the headphone symbol and the overhead monitors with the knob beneath the speaker symbol at the far right. When recording your voice, turn the overhead monitors down to avoid feedback. 
+</p>
 
               <!--
 This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a href="https://www.flickr.com/photos/mkeefe/2349283746/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/2367/2349283746_ea30521830_3k.jpg" ></a>
               <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
           </li>
@@ -140,8 +142,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Recording</h3>
+              <p>You may begin recording when all your inputs are set to the correct level, and the tracks are armed. Start the recording by clicking on the blinking red circle in the upper middle of the window. When you are done recording, click the square “stop” button next to the recording button to stop recording. Make sure to save your work again, “File > Save.”</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -152,18 +154,20 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Editing</h3>
+              <p>There are a number of editing styles and you don’t need to follow the formula that we provide. Drag and alternate your songs between tracks, and overlap them slightly to fade them together and avoid silent space. You can fade tracks by clicking on an upper corner of an audio section and dragging it towards the song’s center. If needed, you should adjust the levels on your tracks. If required -- you should have recorded close to the correct and consistent level, but it may be necessary to even out tracks. Levels can be adjusted for the whole track using the speaker slider at the left of the track or for individual songs by selecting a section and clicking and dragging the small rectangle in the top middle of the section up or down.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Exporting</h3>
+              <p>When you are satisfied with your show, save the Hindenburg file one more time. To export, click File > Export…, and select the SPRING 2022 folder as the location. Set format to .mp3 with the format dropdown. (Ensure that the Encoding dropdown is set to Med Quality). Open the Chrome browser and select the first bookmark to open the Drive folder (WPR Show Uploads Spring 2022).</p> 
             </div>
           </li>
+          
+
 
 
 
