--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ with a paragraph to create a photo with a caption.
               <p>You may begin recording when all your inputs are set to the correct level, and the tracks are armed. Start the recording by clicking on the blinking red circle in the upper middle of the window. When you are done recording, click the square “stop” button next to the recording button to stop recording. Make sure to save your work again, “File > Save.”</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/HZyWycYn7dI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
 
           </li>
