--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="http://i.picasion.com/resize92/d2261932d421f40877776b380257153f.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="http://i.picasion.com/resize92/0be296fbec668abc39d21bcfee8d9c80.png" width="100" align="right" height="100" alt="KH_monogram">            
       <h1>Isaiah Lawson</h1>
       <h3>How to record a show for WolfPack Radio</h3>
 
@@ -134,7 +134,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/mkeefe/2349283746/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/2367/2349283746_ea30521830_3k.jpg" ></a>
+              <a href="https://www.flickr.com/photos/mkeefe/2349283746/" title="Microphone by Matthew Keefe,on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/2367/2349283746_ea30521830_3k.jpg" ></a>
               <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
             </div>
           </li>
