--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://www.flickr.com/photos/mkeefe/2349283746/" title="Microphone by Matthew Keefe,on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="https://live.staticflickr.com/2367/2349283746_ea30521830_3k.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a href="https://www.flickr.com/photos/mkeefe/2349283746/" title="Microphone by Matthew Keefe,on Flickr"><img alt="Close up of Microphone" height="%" width="%" src="https://live.staticflickr.com/2367/2349283746_ea30521830_3k.jpg" ></a>
+              <p class="caption">Close up of Microphone</p>
             </div>
           </li>
 
@@ -185,8 +185,8 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Learn more about Wolfpack Radio <a href="http://wolfpackradio.org" title="WolfPack Radio">WikiHow</a>.</p>
+      <p>Images are by <a href="https://www.flickr.com/photos/mkeefe/2349283746/in/photolist-4zAGdb-9KmskE-2dBA8-7LEhEN-K7m476-2mUyQfs-fsu4mD-bfVQdK-9fUA2A-Bt3Eqs-2hKRDcR-nMvDpR-DqAJxv-3AAmn-NtaN-66XNWy-6smDJg-4AHneV-5o5yMQ-9XZhS1-8GM6vG-9dJtmy-5xuHmm-ca1LqQ-ca1KS9-chQM-6dWUFw-7WUhr-bxBDi8-bqDZ5D-oXSCy-6cvUM7-4s88zZ-4G2yTA-4rcG6i-6afcEj-9LTftm-6Tru5D-5FGtg8-dkvYDn-9AeALN-b3fAh8-8FU4JY-2EnRTg-4sdQzx-5Rpeva-4nXAd1-7ovwn5-6bc1ej-EUGjGX" title="Microphone">puuikibeach from Flickr</a></p>
     </footer>
 
     <!--
@@ -215,7 +215,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
+        font-family:Montserrat, sans-serif;         /* CHANGE THE FONT HERE */
         color:#555;         /* CHANGE THE FONT COLOR HERE */
       }  
 
@@ -224,7 +224,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#FF8835;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -262,7 +262,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Ubuntu, sans-serif;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
@@ -282,7 +282,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D3E3E8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #29BCFF;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
