--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Add your introduction to your step-by-step-guide, including a title, time requir
               <b>Awesome rating:</b> 100% Awesome!!!</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>If you’re interested in joining Wolfpack Radio and want to know more about how to make a show for us, follow the article that I’ve provided for you.</p>
 
           </div>
 
