--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Montserrat, sans-serif;         /* CHANGE THE FONT HERE */
+        font-family:Montserrat,         /* CHANGE THE FONT HERE */
         color:#555;         /* CHANGE THE FONT COLOR HERE */
       }  
 
@@ -253,7 +253,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
+        color:##FFD9CD;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
@@ -262,7 +262,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Ubuntu, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Ubuntu,          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
