--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #29BCFF;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #FF6635;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
@@ -354,7 +354,7 @@ Customise the visual style and appearance of your guide.
 
       /* Hover state styles for list items inside unordered list <li> */
       ul li:hover {
-        background-color: #eedc9c;
+        background-color: #FF6635;
       }
 
 
